Fix checkbox alignment

--- a/client/extensions/woocommerce/app/dashboard/widgets/inventory-widget/style.scss
+++ b/client/extensions/woocommerce/app/dashboard/widgets/inventory-widget/style.scss
@@ -118,4 +118,8 @@
 			margin-right: 8px;
 		}
 	}
+
+	.form-checkbox:checked:before {
+		margin-top: 0;
+	}
 }
